# coursework_6_1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/producer/: producer.cpp  producer.h
src/repair_producer/: repair_producer.cpp  repair_producer.h
src/storage/: storage.cpp  storage.h
src/verification/: verification.cpp  verification.h
